# evalcore

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAP.md  README.md  SECURITY.md  action.yml
.agents/skills/new-scorer/: SKILL.md
.agents/skills/new-target/: SKILL.md
.agents/skills/verify/: SKILL.md
.claude/: git-workflow.md
.claude/agents/: rust-reviewer.md  test-engineer.md
.claude/skills/new-scorer/: SKILL.md
.claude/skills/new-target/: SKILL.md
.codex/agents/: rust-reviewer.toml  test-engineer.toml
.config/: nextest.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/evalcore/: CLAUDE.md  Cargo.toml  README.md
crates/evalcore-config/: CLAUDE.md  Cargo.toml  README.md
crates/evalcore-config/src/: lib.rs
crates/evalcore-core/: CLAUDE.md  Cargo.toml  README.md
crates/evalcore-core/src/: baseline.rs  classification.rs  comparison.rs  dataset.rs  embeddings.rs  engine.rs  gates.rs  http_target.rs  lib.rs  target.rs  trace.rs  types.rs
crates/evalcore-core/tests/: http_target.rs  openai_target.rs
crates/evalcore-report/: CLAUDE.md  Cargo.toml  README.md
crates/evalcore-report/src/: lib.rs
crates/evalcore-report/src/snapshots/: evalcore_report__tests__baseline_section_snapshot.snap  evalcore_report__tests__html_full_report_snapshot.snap  evalcore_report__tests__html_matrix_snapshot.snap  evalcore_report__tests__html_minimal_report_snapshot.snap  evalcore_report__tests__junit_report_snapshot.snap  evalcore_report__tests__terminal_matrix_snapshot.snap  evalcore_report__tests__terminal_report_snapshot.snap  evalcore_report__tests__terminal_report_styled_snapshot.snap  evalcore_report__tests__terminal_report_with_gates_snapshot.snap
crates/evalcore-scorers/: CLAUDE.md  Cargo.toml  README.md
crates/evalcore-scorers/src/: contains.rs  exact.rs  json_schema.rs  judge.rs  lib.rs  pattern.rs  similarity.rs  subprocess.rs  trajectory.rs
crates/evalcore-serve/: CLAUDE.md  Cargo.toml  README.md
crates/evalcore-serve/src/: lib.rs  render.rs
crates/evalcore-store/: CLAUDE.md  Cargo.toml  README.md
crates/evalcore-store/src/: lib.rs
crates/evalcore/src/: main.rs  ui.rs
crates/evalcore/tests/: baseline.rs  cache.rs  cli.rs  history.rs  http_cache.rs  judge.rs  shims.rs  trace.rs  trials.rs
design/: README.md
design/explorations/: logo-variations.html  social-preview.html
design/philosophy/: 01-principles.md  02-brand-identity.md  03-color.md  04-typography.md  05-space-and-layout.md  06-components.md  07-motion.md  08-voice-and-writing.md  09-ecosystem-sync.md
docs/: ARCHITECTURE.md  README.md  cassette-lab-plan.md  trajectory-spec.md
examples/agent-trace/: README.md  cases.jsonl  evals.yaml
examples/agent-trace/traces/: refund-native.json  refund-otel.json
examples/claims-triage/: README.md  cases.jsonl  evals.yaml  triage.sh
examples/openai/: README.md  cases.jsonl  evals.yaml
examples/quickstart/: README.md  bot.sh  cases.jsonl  evals.yaml
examples/support-rag/: README.md  bot.sh  cases.jsonl  evals.yaml
shims/: README.md
shims/deepeval/: contextual_recall.py  faithfulness.py  requirements.txt
shims/ragas/: context_recall.py  faithfulness.py  requirements.txt
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/demo/: agent-trace.tape  matrix.tape  quickstart.tape  theme.tape  trials.tape
site/demo/matrix/: cases.jsonl  evals.yaml
site/demo/trials/: cases.jsonl  evals.yaml
site/public/: CNAME  robots.txt
site/public/casts/: agent-trace.webm  matrix.webm  quickstart.webm  trials.webm
site/public/demo/: quickstart-report.html
site/scripts/: check-assets.mjs
site/src/components/: CastFrame.astro  Footer.astro  GitHubButton.astro  Head.astro  Hero.astro  Logo.astro  Pagination.astro  PipelineDiagram.astro  ReleaseBadge.astro  ReportEmbed.astro  ScorerLadder.astro  SiteTitle.astro  ThemeProvider.astro  ThemeToggle.astro
site/src/components/landing/: Cta.astro  FeatureExplorer.tsx  HeroTerminal.astro  HowItWorks.astro
site/src/content/docs/: 404.md  faq.md  index.mdx
site/src/content/docs/getting-started/: core-concepts.md  core-concepts.mdx  installation.md  installation.mdx  quickstart.md  what-teams-use-it-for.md
site/src/content/docs/guides/: agents-and-traces.md  agents-and-traces.mdx  classification.md  comparing-models.md  comparing-models.mdx  cost-and-budgets.md  custom-scorers.md  evaluating-rest-apis.md  gates-and-baselines.md  html-reports.md  html-reports.mdx  llm-as-judge.md  rag-evaluation.md  rag-faithfulness-cookbook.md  record-replay.md  run-history-and-serve.md  running-in-ci.md  semantic-similarity.md  trials-and-statistics.md  trials-and-statistics.mdx
site/src/content/docs/reference/: cache-and-determinism.md  cli.md  configuration.md  subprocess-protocol.md  trajectory-format.md
site/src/styles/: base.css  chrome.css  components.css  custom.css  landing.css  tokens.css
