[workspace]
resolver = "2"
members = [
    "crates/evalcore",
    "crates/evalcore-config",
    "crates/evalcore-core",
    "crates/evalcore-report",
    "crates/evalcore-scorers",
    "crates/evalcore-store",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/eval-core/evalcore"
rust-version = "1.75"

[workspace.dependencies]
# internal crates (version required alongside path so crates.io publishes work)
evalcore-config = { path = "crates/evalcore-config", version = "0.3.0" }
evalcore-core = { path = "crates/evalcore-core", version = "0.3.0" }
evalcore-report = { path = "crates/evalcore-report", version = "0.3.0" }
evalcore-scorers = { path = "crates/evalcore-scorers", version = "0.3.0" }
evalcore-store = { path = "crates/evalcore-store", version = "0.3.0" }

# external
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util"] }

# dev-dependencies
assert_cmd = "2"
insta = "1"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
