[workspace]
resolver = "2"
members = [
    "crates/evalcore",
    "crates/evalcore-config",
    "crates/evalcore-core",
    "crates/evalcore-report",
    "crates/evalcore-scorers",
    "crates/evalcore-serve",
    "crates/evalcore-store",
]

[workspace.package]
version = "0.7.0"
authors = ["Abhishek Manyam", "Kuladeep Mantri"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/eval-core/evalcore"
rust-version = "1.75"

[workspace.dependencies]
# internal crates (version required alongside path so crates.io publishes work)
evalcore-config = { path = "crates/evalcore-config", version = "0.7.0" }
evalcore-core = { path = "crates/evalcore-core", version = "0.7.0" }
evalcore-report = { path = "crates/evalcore-report", version = "0.7.0" }
evalcore-scorers = { path = "crates/evalcore-scorers", version = "0.7.0" }
evalcore-serve = { path = "crates/evalcore-serve", version = "0.7.0" }
evalcore-store = { path = "crates/evalcore-store", version = "0.7.0" }

# external
anstyle = "1"
anyhow = "1"
async-trait = "0.1"
# Local read-only run-history viewer (`evalcore serve`). Minimal feature set:
# HTTP/1 + the tokio server glue + query extraction for /diff. No JSON, TLS,
# multipart, or tracing — the viewer is localhost-only and self-contained.
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "query"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
# json-schema scorer. default-features = false drops resolve-http/resolve-file
# (and their reqwest+rustls tree): remote and file:// $ref resolution stay OFF,
# which the scorer requires for determinism and no-network. Draft 2020-12
# validation lives in the crate core and needs no feature flag.
jsonschema = { version = "0.48", default-features = false }
percent-encoding = "2"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util"] }

# dev-dependencies
assert_cmd = "2"
insta = "1"
predicates = "3"
tempfile = "3"
# serve tests drive the axum router with tower's oneshot — no real port bind.
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
