[package]
name = "evalcore-report"
description = "Report rendering (terminal, JSON, JUnit XML) for EvalCore run results"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
evalcore-core = { workspace = true }

anstyle = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
