[package]
name = "evalcore-scorers"
description = "Built-in scorers (contains, exact, regex, subprocess, LLM judge) for EvalCore"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
evalcore-config = { workspace = true }
evalcore-core = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
jsonschema = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
