[package]
name = "evalcore-store"
description = "Local SQLite storage for EvalCore: the record/replay cache for LLM calls"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
evalcore-core = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
