[package]
name = "evalcore"
description = "Know when your AI gets worse before your users do. The eval engine for AI systems: record, replay, compare, and gate LLM and agent behavior"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"
homepage = "https://eval-core.github.io/evalcore/"
documentation = "https://eval-core.github.io/evalcore/"
# crates.io caps these at 5 keywords (<=20 chars each) and 5 categories.
keywords = ["llm", "eval", "testing", "ai", "agent"]
categories = ["command-line-utilities", "development-tools::testing", "development-tools"]

[[bin]]
name = "evalcore"
path = "src/main.rs"

[dependencies]
evalcore-config = { workspace = true }
evalcore-core = { workspace = true }
evalcore-report = { workspace = true }
evalcore-scorers = { workspace = true }
evalcore-serve = { workspace = true }
evalcore-store = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
# evalcore-store lets the history tests read back the recorded run rows.
evalcore-store = { workspace = true }

assert_cmd = { workspace = true }
predicates = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
